manifests/base/security/network-policy-allow-ingress.yaml
# Allow traffic from ingress controller
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: haproxy-controller
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
