manifests/base/security/network-policy-allow-vault.yaml
# Allow traffic to Vault
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vault
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vault
    ports:
    - protocol: TCP
      port: 8200
